// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Full Height Media" Hero Banner correctly 1`] = `
.c8 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c8 {
  color: #000000;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

.c9 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c9 {
  color: #000000;
}

.c9 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  width: 100%;
  height: auto;
  display: flex;
  position: relative;
  flex-direction: column;
  background: #86E4E9;
  justify-content: center;
  padding: 0rem 0 2rem;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: -2rem 1rem 0;
}

.c7 {
  width: 100%;
  border-radius: 1rem;
  padding: 2rem;
  color: #000000;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  background-color: #FFFFFF;
}

.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  border-radius: 1rem;
}

@media (min-width: 740px) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c2 {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c2 img {
    object-position: top center;
    height: 100%;
    transform: scale(1.02);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  }

  .c2:has(+ div a:hover) >div>img {
    transform: scale(1.04);
  }
}

@media (min-width: 740px) {
  .c5 {
    margin: -2rem 2rem 0rem;
    width: calc(100% - (2 * 2rem));
  }
}

@media (min-width: 1024px) {
  .c5 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    max-width: 1200px;
    display: flex;
    align-items: center;
    margin: 0 auto;
    justify-content: flex-start;
    height: 75vh;
    min-height: 600px;
    max-height: 750px;
  }
}

@media (min-width: 1024px) {
  .c7 {
    padding: 2rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    width: 92%;
  }
}

@media (min-width: 1024px) {
  .c6 {
    height: auto;
    width: 50%;
    margin: 2rem 0;
    justify-content: flex-end;
  }
}

<div
  className="c0"
  paddingBottom="2rem"
  paddingTop="0rem"
  pageBackgroundColour="teal_light"
  variant="full_height_media"
>
  <div
    className="c1"
    textBannerCopyBackgroundColour="deep_violet"
    variant="full_height_media"
  >
    <div
      className="c2"
      variant="full_height_media"
    >
      <div
        className="c3 lazyload"
        height="100%"
        image="../PromoLW.jpg"
        images="../PromoLW.jpg"
        isBackgroundImage={false}
        nonObjFitImage="../PromoLW.jpg"
        objFitState={true}
        setObjFitState={[Function]}
        width="100%"
      >
        <img
          alt="Image alt text"
          className="c4 lazyload"
          data-lowsrc="../PromoLW.jpg"
          data-sizes="auto"
          data-src="../PromoLW.jpg"
          data-srcset="../PromoLW.jpg"
          height="100%"
          mediumBreakpointRowLayout={null}
          objFitState={true}
          objectFit="cover"
          smallBreakpointRowLayout={null}
          src="../PromoLW.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c5"
      copyLeft={true}
      variant="full_height_media"
    >
      <div
        className="c6"
        copyLeft={true}
        variant="full_height_media"
      >
        <div
          className="c7"
          copyColour="black"
          textBannerCopyBackgroundColour="deep_violet"
          variant="full_height_media"
        >
          <h1
            className="c8"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c9"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders "Half Height Media" Hero Banner correctly 1`] = `
.c8 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c8 {
  color: #000000;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

.c9 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c9 {
  color: #000000;
}

.c9 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  width: 100%;
  height: auto;
  display: flex;
  position: relative;
  flex-direction: column;
  background: #86E4E9;
  justify-content: center;
  padding: 0rem 0 2rem;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: -2rem 1rem 0;
}

.c7 {
  width: 100%;
  border-radius: 1rem;
  padding: 2rem;
  color: #000000;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  background-color: #FFFFFF;
}

.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  border-radius: 1rem;
}

@media (min-width: 740px) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c2 {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c2 img {
    object-position: top center;
    height: 100%;
    transform: scale(1.02);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    min-height: 450px;
  }

  .c2:has(+ div a:hover) >div>img {
    transform: scale(1.04);
  }
}

@media (min-width: 740px) {
  .c5 {
    margin: -2rem 2rem 0rem;
    width: calc(100% - (2 * 2rem));
  }
}

@media (min-width: 1024px) {
  .c5 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    max-width: 1200px;
    display: flex;
    align-items: center;
    margin: 0 auto;
    justify-content: flex-end;
    height: auto;
    min-height: 450px;
  }
}

@media (min-width: 1024px) {
  .c7 {
    padding: 2rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    width: 92%;
  }
}

@media (min-width: 1024px) {
  .c6 {
    height: auto;
    width: 50%;
    margin: 2rem 0;
    justify-content: flex-start;
  }
}

<div
  className="c0"
  paddingBottom="2rem"
  paddingTop="0rem"
  pageBackgroundColour="teal_light"
  variant="half_height_media"
>
  <div
    className="c1"
    textBannerCopyBackgroundColour="deep_violet"
    variant="half_height_media"
  >
    <div
      className="c2"
      variant="half_height_media"
    >
      <div
        className="c3 lazyload"
        height="100%"
        image="../PromoLW.jpg"
        images="../PromoLW.jpg"
        isBackgroundImage={false}
        nonObjFitImage="../PromoLW.jpg"
        objFitState={true}
        setObjFitState={[Function]}
        width="100%"
      >
        <img
          alt="Image alt text"
          className="c4 lazyload"
          data-lowsrc="../PromoLW.jpg"
          data-sizes="auto"
          data-src="../PromoLW.jpg"
          data-srcset="../PromoLW.jpg"
          height="100%"
          mediumBreakpointRowLayout={null}
          objFitState={true}
          objectFit="cover"
          smallBreakpointRowLayout={null}
          src="../PromoLW.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c5"
      copyLeft={false}
      variant="half_height_media"
    >
      <div
        className="c6"
        copyLeft={false}
        variant="half_height_media"
      >
        <div
          className="c7"
          copyColour="black"
          textBannerCopyBackgroundColour="deep_violet"
          variant="half_height_media"
        >
          <h1
            className="c8"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c9"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders "Text Banner" Hero Banner correctly 1`] = `
.c5 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c5 {
  color: #000000;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c0 {
  width: 100%;
  height: auto;
  display: flex;
  position: relative;
  flex-direction: column;
  background: #86E4E9;
  justify-content: center;
  padding: 0rem 0 2rem;
  padding: 0rem 1rem 2rem;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.c2 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: 0;
  width: 100%;
}

.c4 {
  width: 100%;
  border-radius: 1rem;
  padding: 3rem 2rem;
  color: #000000;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  background-color: #2C0230;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  border-radius: 1rem;
}

@media (min-width: 740px) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding: 0rem 2rem 2rem;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c2 {
    margin: 0;
    width: 100%;
  }
}

@media (min-width: 1024px) {
  .c2 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    margin: 0 auto;
    justify-content: center;
  }
}

@media (min-width: 740px) {
  .c4 {
    padding: 4rem 11%;
  }
}

@media (min-width: 1024px) {
  .c4 {
    width: 100%;
  }
}

@media (min-width: 1024px) {
  .c3 {
    height: auto;
    width: 100%;
    margin: 0;
    justify-content: flex-start;
  }
}

<div
  className="c0"
  paddingBottom="2rem"
  paddingTop="0rem"
  pageBackgroundColour="teal_light"
  variant="text_banner"
>
  <div
    className="c1"
    textBannerCopyBackgroundColour="deep_violet"
    variant="text_banner"
  >
    <div
      className="c2"
      copyLeft={false}
      variant="text_banner"
    >
      <div
        className="c3"
        copyLeft={false}
        variant="text_banner"
      >
        <div
          className="c4"
          copyColour="black"
          textBannerCopyBackgroundColour="deep_violet"
          variant="text_banner"
        >
          <h1
            className="c5"
          >
            Curabitur pretium tincidunt lacus
          </h1>
          <p
            className="c6"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders "Text Banner" Hero Banner correctly 2`] = `
.c8 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

.c9 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c9 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c11 {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c13 {
  width: 100%;
  height: auto;
  display: block;
  object-fit: contain;
}

.c0 {
  width: 100%;
  height: auto;
  display: flex;
  position: relative;
  flex-direction: column;
  background: #86E4E9;
  justify-content: center;
  padding: 2rem 0 2rem;
}

.c1 {
  width: 100%;
  max-width: none;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
}

.c5 {
  position: relative;
  height: 100%;
  left: 0;
  right: 0;
  display: flex;
  width: calc(100% - (2 * 1rem));
  margin: -2rem 1rem 0;
}

.c7 {
  width: 100%;
  border-radius: 1rem;
  padding: 2rem;
  color: #000000;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  background-color: #FFFFFF;
}

.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  border-radius: 1rem;
}

.c10 {
  position: absolute;
  margin: 1rem;
  width: 130px;
  height: 80px;
  top: 0;
  right: 0;
}

.c12 {
  width: 100%;
  height: 100%;
}

.c12 img {
  width: inherit;
  height: inherit;
  object-position: top right;
}

@media (min-width: 740px) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding: 2rem 2rem 2rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c2 {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c2 img {
    object-position: top center;
    height: 100%;
    transform: scale(1.02);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  }

  .c2:has(+ div a:hover) >div>img {
    transform: scale(1.04);
  }
}

@media (min-width: 740px) {
  .c5 {
    margin: -2rem 2rem 0rem;
    width: calc(100% - (2 * 2rem));
  }
}

@media (min-width: 1024px) {
  .c5 {
    position: relative;
    top: auto;
    left: auto;
    height: 100%;
    width: 100%;
    max-width: 1200px;
    display: flex;
    align-items: center;
    margin: 0 auto;
    justify-content: flex-start;
    height: 75vh;
    min-height: 600px;
    max-height: 750px;
  }
}

@media (min-width: 1024px) {
  .c7 {
    padding: 2rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    width: 92%;
  }
}

@media (min-width: 1024px) {
  .c6 {
    height: auto;
    width: 50%;
    margin: 2rem 0;
    justify-content: flex-end;
  }
}

@media (min-width: 1024px) {
  .c10 {
    margin: 1.5rem;
    width: 160px;
    height: 100px;
    right: 0;
  }
}

<div
  className="c0"
  paddingBottom="2rem"
  paddingTop="2rem"
  pageBackgroundColour="teal_light"
  variant="full_height_media"
>
  <div
    className="c1"
    textBannerCopyBackgroundColour="deep_violet"
    variant="full_height_media"
  >
    <div
      className="c2"
      variant="full_height_media"
    >
      <div
        className="c3 lazyload"
        height="100%"
        image="../PromoLW.jpg"
        images="../PromoLW.jpg"
        isBackgroundImage={false}
        nonObjFitImage="../PromoLW.jpg"
        objFitState={true}
        setObjFitState={[Function]}
        width="100%"
      >
        <img
          alt="Image alt text"
          className="c4 lazyload"
          data-lowsrc="../PromoLW.jpg"
          data-sizes="auto"
          data-src="../PromoLW.jpg"
          data-srcset="../PromoLW.jpg"
          height="100%"
          mediumBreakpointRowLayout={null}
          objFitState={true}
          objectFit="cover"
          smallBreakpointRowLayout={null}
          src="../PromoLW.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c5"
      copyLeft={true}
      variant="full_height_media"
    >
      <div
        className="c6"
        copyLeft={true}
        variant="full_height_media"
      >
        <div
          className="c7"
          copyColour="black"
          textBannerCopyBackgroundColour="deep_violet"
          variant="full_height_media"
        >
          <h1
            className="c8"
          >
            Full Height: Copy Left w/Logo (Right on L+)
          </h1>
          <p
            className="c9"
          >
            SQUARE-ISH logo shown top-right on Small and Medium breakpoints by design; images for those contexts will be picked to suit. However, as the image change logic happens at CRcom integration level (to avoid loading huge, unused images), we have a simpler, more overlappy example here.
          </p>
        </div>
      </div>
    </div>
    <div
      className="c10"
      imageRight={true}
    >
      <div
        className="c11 c12"
        height="auto"
        image="../HeroBannerLogo-Square.png"
        imageRight={true}
        images={null}
        isBackgroundImage={false}
        nonObjFitImage="../HeroBannerLogo-Square.png"
        objFitState={true}
        width="100%"
      >
        <img
          alt=""
          className="c13 lazyload"
          data-src="../HeroBannerLogo-Square.png"
          height="auto"
          objFitState={true}
          objectFit="contain"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;
